--- a/index.html
+++ b/index.html
@@ -4,12 +4,29 @@
             <meta charset="UTF-8">
             <meta http-equiv="X-UA-Compatible" content="IE=edge">
             <meta name="viewport" content="width=device-width, initial-scale=1.0">
+            <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
             <link rel="stylesheet" href="./css/style.css">
             <title>Zoom</title>
         </head>
         <body>
             <!-- header -->
-            <header></header>
+            <header class="flex">
+                <div class="header-left flex">
+                    <div class="green-shield-icon">
+                        <i class="fas fa-shield-alt"></i>
+                    </div>
+                    <div class="recording white flex">
+                        <img src="./img/rec.png" alt="rec-symbol">
+                        <p>Recording...</p>
+                    </div>
+                </div>
+                <div class="header-right flex">
+                    <div class="grid-icon">
+                        <i class="fas fa-th white"></i>
+                    </div>
+                    <a class="white" href="#">View</a>
+                </div>
+            </header>
             <!-- /header -->
             <!-- main -->
             <main></main>
