--- a/index.html
+++ b/index.html
@@ -15,16 +15,16 @@
                     <div class="green-shield-icon">
                         <i class="fas fa-shield-alt"></i>
                     </div>
-                    <div class="recording white flex">
-                        <img src="./img/rec.png" alt="rec-symbol">
-                        <p>Recording...</p>
+                    <div class="recording-col white flex">
+                        <img id="rec-img" src="./img/rec.png" alt="rec-symbol">
+                        <p class="recording">Recording...</p>
                     </div>
                 </div>
                 <div class="header-right flex">
                     <div class="grid-icon">
                         <i class="fas fa-th white"></i>
                     </div>
-                    <a class="white" href="#">View</a>
+                    <a class="white view" href="#">View</a>
                 </div>
             </header>
             <!-- /header -->
