--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                     <div class="green-shield-icon">
                         <i class="fas fa-shield-alt"></i>
                     </div>
-                    <div class="recording-col white flex">
+                    <div class="recording-col white">
                         <img id="rec-img" src="./img/rec.png" alt="rec-symbol">
                         <p class="recording">Recording...</p>
                     </div>
