completato header, inizio main

--- a/index.html
+++ b/index.html
@@ -29,7 +29,58 @@
             </header>
             <!-- /header -->
             <!-- main -->
-            <main></main>
+            <main class="flex">
+                <div class="col-main-left"></div>
+                <div class="col-main-center flex wrap">
+                    <div class="user-cam">
+                        <img src="./img/asino.jpg" alt="ripresa video studente">
+                    </div>
+                    <div class="user-cam">
+                        <img src="./img/asino.jpg" alt="ripresa video studente">
+                    </div>
+                    <div class="user-cam">
+                        <img src="./img/asino.jpg" alt="ripresa video studente">
+                    </div>
+                    <div class="user-cam">
+                        <img src="./img/asino.jpg" alt="ripresa video studente">
+                    </div>
+                    <div class="user-cam">
+                        <img src="./img/asino.jpg" alt="ripresa video studente">
+                    </div>
+                    <div class="user-cam">
+                        <img src="./img/asino.jpg" alt="ripresa video studente">
+                    </div>
+                    <div class="user-cam">
+                        <img src="./img/asino.jpg" alt="ripresa video studente">
+                    </div>
+                    <div class="user-cam">
+                        <img src="./img/asino.jpg" alt="ripresa video studente">
+                    </div>
+                    <div class="user-cam">
+                        <img src="./img/asino.jpg" alt="ripresa video studente">
+                    </div>
+                    <div class="user-cam">
+                        <img src="./img/asino.jpg" alt="ripresa video studente">
+                    </div>
+                    <div class="user-cam">
+                        <img src="./img/asino.jpg" alt="ripresa video studente">
+                    </div>
+                    <div class="user-cam">
+                        <img src="./img/asino.jpg" alt="ripresa video studente">
+                    </div>
+                    <div class="user-cam">
+                        <img src="./img/asino.jpg" alt="ripresa video studente">
+                    </div>
+                    <div class="user-cam">
+                        <img src="./img/asino.jpg" alt="ripresa video studente">
+                    </div>
+                    <div class="user-cam">
+                        <img src="./img/asino.jpg" alt="ripresa video studente">
+                    </div>
+                </div>
+                <div class="col-main-right"></div>
+
+            </main>
             <!-- /main -->
             <!-- footer -->
             <footer></footer>
