--- a/index.html
+++ b/index.html
@@ -30,56 +30,203 @@
             <!-- /header -->
             <!-- main -->
             <main class="flex">
-                <div class="col-main-left"></div>
+                <div class="col-main-left flex">
+                    <a class="flex" href="#">
+                        <div class="btn-arrow flex"> 
+                            <i class="fas fa-caret-left"></i>
+                            <div class="screen-indicator white">
+                                1/3
+                            </div>
+                        </div>
+                    </a>
+                </div>
                 <div class="col-main-center flex wrap">
                     <div class="user-cam">
                         <img src="./img/asino.jpg" alt="ripresa video studente">
+                        <div class="user-info">
+                            <i class="fas fa-microphone-alt-slash"></i>
+                            <p class="user-name">Pinco Pallo</p>
+                        </div>
                     </div>
                     <div class="user-cam">
                         <img src="./img/asino.jpg" alt="ripresa video studente">
+                        <div class="user-info">
+                            <i class="fas fa-microphone-alt-slash"></i>
+                            <p class="user-name">Pinco Pallo</p>
+                        </div>
                     </div>
                     <div class="user-cam">
                         <img src="./img/asino.jpg" alt="ripresa video studente">
+                        <div class="user-info">
+                            <i class="fas fa-microphone-alt-slash"></i>
+                            <p class="user-name">Pinco Pallo</p>
+                        </div>
                     </div>
                     <div class="user-cam">
                         <img src="./img/asino.jpg" alt="ripresa video studente">
+                        <div class="user-info">
+                            <i class="fas fa-microphone-alt-slash"></i>
+                            <p class="user-name">Pinco Pallo</p>
+                        </div>
                     </div>
                     <div class="user-cam">
                         <img src="./img/asino.jpg" alt="ripresa video studente">
+                        <div class="user-info">
+                            <i class="fas fa-microphone-alt-slash"></i>
+                            <p class="user-name">Pinco Pallo</p>
+                        </div>
                     </div>
                     <div class="user-cam">
                         <img src="./img/asino.jpg" alt="ripresa video studente">
+                        <div class="user-info">
+                            <i class="fas fa-microphone-alt-slash"></i>
+                            <p class="user-name">Pinco Pallo</p>
+                        </div>
                     </div>
                     <div class="user-cam">
                         <img src="./img/asino.jpg" alt="ripresa video studente">
+                        <div class="user-info">
+                            <i class="fas fa-microphone-alt-slash"></i>
+                            <p class="user-name">Pinco Pallo</p>
+                        </div>
                     </div>
                     <div class="user-cam">
                         <img src="./img/asino.jpg" alt="ripresa video studente">
+                        <div class="user-info">
+                            <i class="fas fa-microphone-alt-slash"></i>
+                            <p class="user-name">Pinco Pallo</p>
+                        </div>
                     </div>
                     <div class="user-cam">
                         <img src="./img/asino.jpg" alt="ripresa video studente">
+                        <div class="user-info">
+                            <i class="fas fa-microphone-alt-slash"></i>
+                            <p class="user-name">Pinco Pallo</p>
+                        </div>
                     </div>
                     <div class="user-cam">
                         <img src="./img/asino.jpg" alt="ripresa video studente">
+                        <div class="user-info">
+                            <i class="fas fa-microphone-alt-slash"></i>
+                            <p class="user-name">Pinco Pallo</p>
+                        </div>
                     </div>
                     <div class="user-cam">
                         <img src="./img/asino.jpg" alt="ripresa video studente">
+                        <div class="user-info">
+                            <i class="fas fa-microphone-alt-slash"></i>
+                            <p class="user-name">Pinco Pallo</p>
+                        </div>
                     </div>
                     <div class="user-cam">
                         <img src="./img/asino.jpg" alt="ripresa video studente">
+                        <div class="user-info">
+                            <i class="fas fa-microphone-alt-slash"></i>
+                            <p class="user-name">Pinco Pallo</p>
+                        </div>
                     </div>
                     <div class="user-cam">
                         <img src="./img/asino.jpg" alt="ripresa video studente">
+                        <div class="user-info">
+                            <i class="fas fa-microphone-alt-slash"></i>
+                            <p class="user-name">Pinco Pallo</p>
+                        </div>
                     </div>
                     <div class="user-cam">
                         <img src="./img/asino.jpg" alt="ripresa video studente">
+                        <div class="user-info">
+                            <i class="fas fa-microphone-alt-slash"></i>
+                            <p class="user-name">Pinco Pallo</p>
+                        </div>
                     </div>
                     <div class="user-cam">
                         <img src="./img/asino.jpg" alt="ripresa video studente">
+                        <div class="user-info">
+                            <i class="fas fa-microphone-alt-slash"></i>
+                            <p class="user-name">Pinco Pallo</p>
+                        </div>
+                    </div>
+                    <div class="user-cam">
+                        <img src="./img/asino.jpg" alt="ripresa video studente">
+                        <div class="user-info">
+                            <i class="fas fa-microphone-alt-slash"></i>
+                            <p class="user-name">Pinco Pallo</p>
+                        </div>
+                    </div>
+                    <div class="user-cam">
+                        <img src="./img/asino.jpg" alt="ripresa video studente">
+                        <div class="user-info">
+                            <i class="fas fa-microphone-alt-slash"></i>
+                            <p class="user-name">Pinco Pallo</p>
+                        </div>
+                    </div>
+                    <div class="user-cam">
+                        <img src="./img/asino.jpg" alt="ripresa video studente">
+                        <div class="user-info">
+                            <i class="fas fa-microphone-alt-slash"></i>
+                            <p class="user-name">Pinco Pallo</p>
+                        </div>
+                    </div>
+                    <div class="user-cam">
+                        <img src="./img/asino.jpg" alt="ripresa video studente">
+                        <div class="user-info">
+                            <i class="fas fa-microphone-alt-slash"></i>
+                            <p class="user-name">Pinco Pallo</p>
+                        </div>
+                    </div>
+                    <div class="user-cam">
+                        <img src="./img/asino.jpg" alt="ripresa video studente">
+                        <div class="user-info">
+                            <i class="fas fa-microphone-alt-slash"></i>
+                            <p class="user-name">Pinco Pallo</p>
+                        </div>
+                    </div>
+                    <div class="user-cam">
+                        <img src="./img/asino.jpg" alt="ripresa video studente">
+                        <div class="user-info">
+                            <i class="fas fa-microphone-alt-slash"></i>
+                            <p class="user-name">Pinco Pallo</p>
+                        </div>
+                    </div>
+                    <div class="user-cam">
+                        <img src="./img/asino.jpg" alt="ripresa video studente">
+                        <div class="user-info">
+                            <i class="fas fa-microphone-alt-slash"></i>
+                            <p class="user-name">Pinco Pallo</p>
+                        </div>
+                    </div>
+                    <div class="user-cam">
+                        <img src="./img/asino.jpg" alt="ripresa video studente">
+                        <div class="user-info">
+                            <i class="fas fa-microphone-alt-slash"></i>
+                            <p class="user-name">Pinco Pallo</p>
+                        </div>
+                    </div>
+                    <div class="user-cam">
+                        <img src="./img/asino.jpg" alt="ripresa video studente">
+                        <div class="user-info">
+                            <i class="fas fa-microphone-alt-slash"></i>
+                            <p class="user-name">Pinco Pallo</p>
+                        </div>
+                    </div>
+                    <div class="user-cam">
+                        <img src="./img/asino.jpg" alt="ripresa video studente">
+                        <div class="user-info">
+                            <i class="fas fa-microphone-alt-slash"></i>
+                            <p class="user-name">Pinco Pallo</p>
+                        </div>
                     </div>
                 </div>
-                <div class="col-main-right"></div>
-
+                <div class="col-main-right flex">
+                        <a class="flex" href="#">
+                            <div class="btn-arrow flex"> 
+                                <i class="fas fa-caret-right"></i>
+                                <div class="screen-indicator white">
+                                    3/3
+                                </div>
+                            </div>
+                        </a>
+                </div>
             </main>
             <!-- /main -->
             <!-- footer -->
