--- a/index.html
+++ b/index.html
@@ -230,7 +230,21 @@
             </main>
             <!-- /main -->
             <!-- footer -->
-            <footer></footer>
+            <footer class="flex">
+                <div class="footer-left flex">
+                    <div class="btn-footer"></div>
+                        <i class="fas fa-microphone"></i>
+                        <p class="footer-btn-txt">Mute</p>
+                    </div>
+                </div>
+                <div class="footer-central">
+
+                </div>
+                <div class="footer-right">
+
+                </div>
+
+            </footer>
             <!-- /footer -->
 
         </body>
