--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
             <meta charset="UTF-8">
             <meta http-equiv="X-UA-Compatible" content="IE=edge">
             <meta name="viewport" content="width=device-width, initial-scale=1.0">
+            <link rel="preconnect" href="https://fonts.googleapis.com">
+            <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+            <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
             <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
             <link rel="stylesheet" href="./css/style.css">
             <title>Zoom</title>
@@ -232,16 +235,57 @@
             <!-- footer -->
             <footer class="flex">
                 <div class="footer-left flex">
-                    <div class="btn-footer"></div>
-                        <i class="fas fa-microphone"></i>
-                        <p class="footer-btn-txt">Mute</p>
+                    <div class="btn-container-footer">
+                        <div class="btn-footer">
+                            <i class="fas fa-microphone"></i>
+                            <p class="footer-btn-txt">Mute</p>
+                        </div>
+                        <div class="arrow-up">
+                            <i class="fas fa-chevron-up"></i>
+                        </div>
                     </div>
+                    <div class="btn-container-footer">
+                        <div class="btn-footer">
+                            <i class="fas fa-video"></i>
+                            <p class="footer-btn-txt">Stop video</p>
+                        </div>
+                        <div class="arrow-up">
+                            <i class="fas fa-chevron-up"></i>
+                        </div>
+                    </div>     
                 </div>
-                <div class="footer-central">
-
+                <div class="footer-central flex">
+                     <div class="btn-container-footer">
+                        <div class="btn-footer">
+                            <i class="fas fa-user-friends"></i>
+                            <p class="footer-btn-txt">Participants</p>
+                        </div>
+                        <div class="arrow-up">
+                            <i class="fas fa-chevron-up"></i>
+                        </div>
+                    </div>
+                    <div class="btn-container-footer">
+                        <div class="btn-footer">
+                            <i class="fas fa-comment-alt"></i>
+                            <p class="footer-btn-txt">Chat</p>
+                        </div>
+                    </div>
+                    <div class="btn-container-footer">
+                        <div class="btn-footer">
+                            <i class="fas fa-pause-circle"></i>
+                            <span><i class="fas fa-stop-circle"></i></span>
+                            <p class="footer-btn-txt">Pause/Stop Recording</p>
+                        </div>
+                    </div>
+                    <div class="btn-container-footer">
+                        <div class="btn-footer">
+                            <i class="fas fa-smile"></i>
+                            <p class="footer-btn-txt">Reactions</p>
+                        </div>
+                    </div>       
                 </div>
                 <div class="footer-right">
-
+                    <a href="#" class="end-btn">End</a>
                 </div>
 
             </footer>
