--- a/index.html
+++ b/index.html
@@ -234,6 +234,7 @@
             <!-- /main -->
             <!-- footer -->
             <footer class="flex">
+                <!-- ------------------footer left-------------- -->
                 <div class="footer-left flex">
                     <div class="btn-container-footer">
                         <div class="btn-footer">
@@ -254,7 +255,14 @@
                         </div>
                     </div>     
                 </div>
+                <!---------------footer central --------------------> 
                 <div class="footer-central flex">
+                    <div class="btn-container-footer">
+                        <div class="btn-footer">
+                            <i class="fas fa-shield-alt"></i>
+                            <p class="footer-btn-txt">Security</p>
+                        </div>
+                    </div>
                      <div class="btn-container-footer">
                         <div class="btn-footer">
                             <i class="fas fa-user-friends"></i>
@@ -271,6 +279,15 @@
                         </div>
                     </div>
                     <div class="btn-container-footer">
+                        <div class="btn-footer green">
+                            <i class="fas fa-share-square"></i>
+                            <p class="footer-btn-txt">Share Screen</p>
+                        </div>
+                        <div class="arrow-up green">
+                            <i class="fas fa-chevron-up"></i>
+                        </div>
+                    </div>
+                    <div class="btn-container-footer">
                         <div class="btn-footer">
                             <i class="fas fa-pause-circle"></i>
                             <span><i class="fas fa-stop-circle"></i></span>
@@ -284,6 +301,7 @@
                         </div>
                     </div>       
                 </div>
+                <!-- ------------------footer right---------------- -->
                 <div class="footer-right">
                     <a href="#" class="end-btn">End</a>
                 </div>
